fix: JBCT suppressions for jOOQ XML export and Maven Mojo classes